一覧ページ文面変更

--- a/app/views/users/document_show.html.erb
+++ b/app/views/users/document_show.html.erb
@@ -63,7 +63,8 @@
     </table>
     <div style="font-size:6px;color:red;margin-top:-2%;" id="deadline">(*期限過ぎますと表示されなくなります)</div>  
      <% else %>
-      <div class="bg-info text-center" style="padding:2%;">まだ提出物ありません。</div>
+      <br><br>
+      <div class="bg-info text-center info2" style="padding:2%;">まだ提出物ありません。</div>
     <% end %>
    <!-- /pc用テーブル -->
 
@@ -128,5 +129,6 @@ body{
 }
 @media screen and (max-width:767px){
   .p{font-size:8px;}
+  .info2{padding:2% 0;margin-top:-10%;}
 }
 </style>
