--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -7,10 +7,11 @@
 
 <%= form_with(url:document_push_path,local:true) do |f| %>
   <%= link_to "メニューへ","/teachers/1",class:"btn btn-default document_index_back_btn2" %>
+   <%= f.submit "通知する",class:"btn btn-primary" %>
+  <!--<% if @not_public > 0%>-->
+   
+  <!--<% end %> -->
 
-  <% if @not_public > 0%>
-    <%= f.submit "通知する",class:"btn btn-primary" %>
-  <% end %> 
 
   <%= link_to "集計ページへ",aggre_documents_path,class:"btn btn-success" %>
 <% end %>
