--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -3,25 +3,25 @@
 
 <div class="title_font document_index_title_h1">
   <h1><i class="fas fa-book-open"></i>&emsp;教員書類管理ページ</h1>
-</div><br>
+</div><br><br>
 
 <%= form_with(url:document_push_path,local:true) do |f| %>
+  
+<% if @not_public > 0%>
   <%= link_to "メニューへ","/teachers/1",class:"btn btn-default document_index_back_btn2" %>
-   <%= f.submit "通知する",class:"btn btn-primary" %>
-  <!--<% if @not_public > 0%>-->
-   
-  <!--<% end %> -->
+  <%= f.submit "通知する",class:"btn btn-primary" %>   
+<% end %> 
 
 
   <%= link_to "集計ページへ",aggre_documents_path,class:"btn btn-success" %>
 <% end %>
-<br><br>
+
 
 <!--モーダル-->
 <!--モーダル処理終了-->
 
 
-<div style="border-top:1px dotted blue;"></div><br>
+<div style="border-top:1px dotted blue;margin-top:1%;"></div><br>
 <div class="row" style="background:#f0f0f0">
   <div class="col-md-10 col-md-offset-1">
    <% if @documents.count >0 %>
